# ChatBOAT

./: .gitignore  CLAUDE.md  README.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: build_and_push.sh  convert_dae_to_obj.py  diagnose_meshes.py  pod_setup.sh  start_vnc.sh
src/: pyproject.toml
src/chatboat_bringup/: CMakeLists.txt  package.xml
src/chatboat_bringup/config/: rviz_config.rviz
src/chatboat_bringup/launch/: bringup.launch.py
src/chatboat_control/: package.xml  setup.cfg  setup.py
src/chatboat_control/chatboat_control/: arm_teleop.py  gripper_service.py  mpc_bridge.py  test_commander.py  vehicle_teleop.py
src/chatboat_control/config/: controller_params.yaml
src/chatboat_control/launch/: control.launch.py
src/chatboat_description/: CMakeLists.txt  package.xml
src/chatboat_description/config/: joint_limits.yaml
src/chatboat_description/launch/: description.launch.py
src/chatboat_description/urdf/: alpha5.urdf.xacro  bluerov2.urdf.xacro  chatboat_uvms.urdf.xacro  eca5e.urdf.xacro  girona500.urdf.xacro  gripper.urdf.xacro
src/chatboat_stonefish/: CMakeLists.txt  package.xml
src/chatboat_stonefish/config/: sim_params.yaml
src/chatboat_stonefish/data/alpha5/: M1.dae  M2-1-1.dae  M2-1-3.dae  M2-1.dae  M2.dae  M3-INLINE.dae  RS1-1010.dae  RS1-124.dae  RS1-130.dae  RS1-139.dae  material.mtl
src/chatboat_stonefish/data/alpha5/reference/: alpha_5.config.xacro  alpha_5_parameters.yaml  gz.xacro  joint_limits.yaml  ros2_control.xacro  standard_jaws.urdf.xacro  urdf.xacro
src/chatboat_stonefish/launch/: simulation.launch.py
src/chatboat_stonefish/scenarios/: chatboat_scenario.scn.xml  girona500_uvms.xml
src/dashboard/: index.html
src/llm2control/: agent.py  config.py  dashboard_bridge.py  dynamics.py  main.py  mpc.py  parser.py  ros_bridge.py
src/llm2control/prompts/: optimization_formulator.py  task_planner.py
