<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatboat_bringup</name>
  <version>0.1.0</version>
  <description>Meta-launch package for GIRONA500 UVMS simulation</description>
  <maintainer email="todo@todo.com">chatboat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>chatboat_description</exec_depend>
  <exec_depend>chatboat_stonefish</exec_depend>
  <exec_depend>chatboat_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
